# iced-tour

./: Cargo.toml
.claude/: settings.local.json
page-boop/: Cargo.toml
page-boop/src/: lib.rs  main.rs
page-poker/: Cargo.toml
page-poker/src/: lib.rs  main.rs
src/: chaos.rs  demo.rs  main.rs  navigation.rs  quiz.rs  screen.rs  slides.rs  sliding.rs  terminal.rs  theming.rs
src/slides/: button.rs  community_widgets.rs  constructors.rs  interactive.rs  intro.rs  layout.rs  message.rs  mod.rs  model.rs  quiz.rs  recap.rs  subscriptions.rs  tasks.rs  text_input.rs  title.rs  update.rs  view.rs
